k8s/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: landmark-app-lb
  namespace: landmark
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-092445457fcf677b9, subnet-0acf59edb9d502cde"
spec:
  type: LoadBalancer
  selector:
    app: landmark-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
